UPD: Added class to comly CSS

--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -26,7 +26,7 @@
     </ul>
   </hgroup>
 
-  <div class="flex justify-between">
+  <div class="product_top">
     {# Images gallery #}
     {% if thumb or images %}
       {% include 'helium/template/common/images_gallery.twig' with {thumb:thumb, images:images, class:'relative'} %}
