--- a/catalog/view/theme/helium/template/extension/module/viewed.twig
+++ b/catalog/view/theme/helium/template/extension/module/viewed.twig
@@ -1,5 +1,5 @@
 {% if products %}
-  <div class="module viewed-products" data-block-name="{{ heading_title }}" data-icon="icon-eye" data-order="3">
+  <div class="module viewed-products mobile_menu" data-block-name="{{ heading_title }}" data-icon="icon-eye" data-order="3">
     <span class="h3">{{ heading_title }}</span>
     <div class="scroll-x js_scroll">
     {% for product in products %}
