--- a/catalog/view/theme/helium/template/common/rating_stars.twig
+++ b/catalog/view/theme/helium/template/common/rating_stars.twig
@@ -1,4 +1,4 @@
-<div aria-label="{{ aria_rating_label }}">
+<div aria-label="{{ aria_rating_label }} {{ rating }}, {{ aria_review_count_label }} {{ count }}" title="{{ aria_rating_label }} {{ rating }}, {{ aria_review_count_label }} {{ count }}">
   <div class="rating" role="presentation">
     {% if rating > 0 %}
       {% for i in 1..5 %}
