--- a/catalog/view/theme/helium/template/extension/module/featured_product.twig
+++ b/catalog/view/theme/helium/template/extension/module/featured_product.twig
@@ -1,5 +1,5 @@
 {% if products %}
-<div class="module featured-category">
+<div id="featured_category" class="module">
   <span class="h3">{{ heading_title }}</span>
   <div class="scroll-x js_scroll">
   {% for product in products %}
