--- a/catalog/view/theme/helium/template/extension/module/filter.twig
+++ b/catalog/view/theme/helium/template/extension/module/filter.twig
@@ -1,4 +1,4 @@
-<div class="module filter mobile_menu" data-block-name="{{ heading_title }}" data-icon="icon-filter" data-order="1">
+<div id="filter" class="module mobile_menu" data-block-name="{{ heading_title }}" data-icon="icon-filter" data-order="1">
   <span class="h3">{{ heading_title }}</span>
   {# Sorting select #}
   <div class="sort">
