--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -375,7 +375,7 @@ nav, hgroup {
     align-items: center;
 }
 /* Title of product page */
-hgroup {align-items: baseline; flex-wrap: wrap}
+hgroup {flex-wrap: wrap}
 hgroup > * {
     width: 100%;
     flex: 1 0 100%;
@@ -509,6 +509,9 @@ button.close:after {
     width: 100%;
     font-size: 2rem;
 }
+/* Position and appearence of product remove buttons in cart */
+tr[id^='product_id_'] {position: relative;}
+tr[id^='product_id_'] button.close {background: transparent; box-shadow: none;}
 
 
 /* Main menu */
@@ -611,6 +614,7 @@ button:active, .button:active, .primary:active, button.active {
 
 /* Button group */
 .btn-group {gap: 1rem}
+.btn-group+.btn-group {padding: 1rem 0 1rem 0;}
 
 /* Input groups, Button groups */
 .input-group, .btn-group {display:flex;flex-direction:row;flex-wrap:nowrap;align-items:center}
@@ -728,7 +732,8 @@ aside>div.module{display: flex; flex-direction: column;}
 /* Grow infos, so miniatures are always the same height */
 .miniature, .miniature > .infos, .caption {display: flex;flex-direction: column;flex: 1 0 auto}
 /* Align product names and blog articles titles */
-.miniature h3, .miniature .h3, .rating  {text-align: center}
+.miniature h3, .miniature .h3, .rating  {text-align: center;}
+.miniature h3 a { padding: 0.5rem; margin: -0.5rem;}
 
 /* Product flags */
 .flags {position: absolute; top: 0; left: 0; width: 0}
@@ -795,6 +800,7 @@ hgroup h1 {
     flex-direction: column;
     align-items: center;
     align-self: center;
+    padding: 0;
 }
 
 /* Subcategory */
@@ -804,7 +810,7 @@ hgroup h1 {
     scroll-snap-align:center
 }
 /* Subcategories responsive grid */
-.subcategories.grid {grid-auto-flow: column; overflow-x: auto; grid-auto-columns: minmax(12rem, 1fr); scroll-snap-type:x mandatory}
+.subcategories.grid {grid-auto-flow: column; overflow-x: auto; grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));; scroll-snap-type:x mandatory}
 /* Subcategory - thumb */
 .subcategory a {display: flex;align-items: center;flex-direction: column; gap: 1rem}
 
@@ -948,17 +954,18 @@ input#input-quantity {
     .hidden-md {display: initial!important}
 
     hgroup > * {
-        width: 50%;
+        /*! width: 50%; */
         flex: 1;
         justify-content: unset;
-        text-align: left;
+        /* text-align: left; */
     }
     hgroup .wrapper {
         display: flex;
         justify-content: end
     }
-    hgroup .title {flex: 0}
-    hgroup h1 {white-space: nowrap;}
+    hgroup .title {flex: 1;}
+    hgroup h1 {align-items: flex-start;}
+    hgroup .rating {justify-content: flex-start;}
 
     .mobile_buttons {display: none!important}
     dialog {width: 800px;}
