--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -810,7 +810,7 @@ hgroup h1 {
     scroll-snap-align:center
 }
 /* Subcategories responsive grid */
-.subcategories.grid {grid-auto-flow: column; overflow-x: auto; grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));; scroll-snap-type:x mandatory}
+.subcategories.grid {grid-auto-flow: column; overflow-x: auto; grid-auto-columns: minmax(12rem, 1fr); scroll-snap-type:x mandatory}
 /* Subcategory - thumb */
 .subcategory a {display: flex;align-items: center;flex-direction: column; gap: 1rem}
 
@@ -886,7 +886,8 @@ input#input-quantity {
         transform: translateX(calc(1rem + 110%));
         transition: var(--time) var(--style);
         z-index: 2;
-        backdrop-filter: blur(5px);
+        /* Firefox bug with position fixed and backdrop filter */
+        /* backdrop-filter: blur(5px); */
     }
     .mobile_menu.open {
         transform: translateX(0%);
@@ -940,7 +941,7 @@ input#input-quantity {
     /* Remove unnecesary scrollbar-gutter on horizontal scrolling blocks */
     .scroll-x {scrollbar-gutter: initial;}
     
-    /* Subcategories - dispplay as grid */
+    /* Subcategories - display as grid */
     .subcategories.grid {grid-auto-flow: initial}
 
     main {
